--- a/package.json
+++ b/package.json
@@ -4,11 +4,34 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
+    "dev:all": "concurrently \"astro dev\" \"node tools/admin/server.mjs\"",
+    "admin": "node tools/admin/server.mjs",
     "build": "astro build",
     "preview": "astro preview",
+    "typecheck": "astro check",
+    "lint": "astro check",
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.16.11"
+    "@astrojs/check": "^0.9.6",
+    "@astrojs/rss": "^4.0.12",
+    "astro": "^5.16.11",
+    "express": "^4.21.2",
+    "fuse.js": "^7.1.0",
+    "gray-matter": "^4.0.3",
+    "katex": "^0.16.22",
+    "markdown-it": "^14.1.0",
+    "markdown-it-anchor": "^9.2.0",
+    "markdown-it-katex": "^2.0.3",
+    "multer": "^1.4.5-lts.1",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-katex": "^7.0.1",
+    "rehype-slug": "^6.0.0",
+    "remark-math": "^6.0.0",
+    "typescript": "^5.9.3"
+  },
+  "devDependencies": {
+    "@types/node": "^22.10.10",
+    "concurrently": "^9.1.2"
   }
 }
